# ratty

./: flake.nix
config/: ratty.toml
nix/: README.md
src/: config.rs  inline.rs  keyboard.rs  kitty.rs  main.rs  model.rs  mouse.rs  plugin.rs  runtime.rs  systems.rs
website/: index.html
widget/: Cargo.toml
